--- a/src/components/CarOffers/CarSlider.css
+++ b/src/components/CarOffers/CarSlider.css
@@ -62,11 +62,7 @@
 }
 
 .mka__range-alignment {
-    display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    float: left;
-    background-color: transparent;
     padding: 10px;
     }
 
@@ -91,4 +87,12 @@
     display: flex;
     align-items: flex-end;
     gap: 10px;
+    flex-wrap: wrap;
 }
+
+@media (max-width: 767px) {
+    .mka__range-btn-align {
+        display: flex;
+        gap: 25px;
+    }
+  }
