--- a/src/components/Copyright/Copyright.css
+++ b/src/components/Copyright/Copyright.css
@@ -15,6 +15,10 @@
     height: auto;
     padding-top: 30px;
   }
+
+  .mka__content-copyright {
+    margin-top: 30px;
+  }
   
   .mka__content-copyright > p {
     margin: 0 0 10px;
