--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@ a {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    overflow: hidden !important;
   }
   
   .form {
