--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -6,25 +6,25 @@
   }
 
 .swiper-button-prev:before  {
-    content: "<" !important;
-    color: var(--color-red) !important;
-    line-height: 2 !important;
-    font-family: 'Rubik', sans-serif !important;
+    content: "<" ;
+    color: var(--color-red);
+    line-height: 2;
+    font-family: 'Rubik', sans-serif;
   }
 
 .swiper-button-next:before {
-    content: ">" !important;
-    color: var(--color-red) !important;
-    line-height: 2 !important;
-    font-family: 'Rubik', sans-serif !important;
+    content: ">" ;
+    color: var(--color-red);
+    line-height: 2;
+    font-family: 'Rubik', sans-serif;
   }
 
 .swiper-button-prev {
-  position: fixed !important;
-    top: 45% !important;
+  position: fixed;
+    top: 45%;
     width: 44px !important; 
     height: 44px !important;
-    background-color: #fff !important;
+    background-color: #fff;
     transition: 300ms ease-out;
     opacity: 0;
     transform: translate(0, 0) !important;
@@ -33,11 +33,11 @@
   }
 
 .swiper-button-next {
-    position: fixed !important;
-    top: 45% !important;
+    position: fixed;
+    top: 45%;
     width: 44px !important; 
     height: 44px !important;
-    background-color: #fff !important;
+    background-color: #fff;
     transition: 300ms ease-out;
     opacity: 0;
     transform: translate(0, 0) !important;
@@ -61,13 +61,13 @@
   }
 
 .swiper-button-prev, .swiper-container-rtl .swiper-button-next {
-  left: 15px !important;
-  right: auto !important;
+  left: -15px !important;
+  right: auto;
 }
 
 .swiper-button-next, .swiper-container-rtl .swiper-button-prev {
-  right: -5px !important;
-  left: auto !important;
+  right: -15px !important;
+  left: auto;
 }
 
 .swiper-button-next:hover,
