--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -38,7 +38,7 @@
 #mercedes-min {
     height: auto;
     position: relative;
-    width: 100%;
+    width: 100vh;
     transform: translate(-60px, 0px);
 ;
 }
@@ -47,12 +47,15 @@
     z-index: 2;
     height: auto;
     position: relative;
-    width: 100%;
+    width: 100vh;
     transform: translate(60px, 0px);
 }
 
-.mka__container .car-aligment {
-    width: 60%;
+.car-aligment {
     display: flex;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 500px;
+    aspect-ratio: 1 / 0.6;
 }
