--- a/src/components/CarOffers/Cars.css
+++ b/src/components/CarOffers/Cars.css
@@ -1,8 +1,13 @@
 .mka__cars-grid {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     column-gap: 30px;
     row-gap: 30px;
+}
+
+.mka__cars-flex {
+  display: flex;
+  flex-direction: column;
 }
 
 @media (max-width: 765px) {
