--- a/src/components/CarOffers/CarSlider.css
+++ b/src/components/CarOffers/CarSlider.css
@@ -20,7 +20,7 @@
     position: absolute;
     width: 100%;
     background-color: #f50c0c !important;
-    /* height: 100%; */
+    height: 6px !important;
     border-radius: 6px;
     }
 
@@ -71,6 +71,11 @@
     gap: 10px;
     color: white;
     }
+
+.mka__range-price {
+    color: var(--color-red);
+    font-weight: bold;
+}    
 
 .mka__range-button {
     margin-top: -10px;
