Mjesto inputa u navu stavljena komponenta Search i dorada responzivnosti drugog pregleda auta

--- a/src/components/CarOffers/CarOffers.css
+++ b/src/components/CarOffers/CarOffers.css
@@ -140,6 +140,10 @@
   display: none;
  }
 
+ .mka__loading-svg-positioning {
+  margin: 350px 0;
+ }
+
   @media (max-width: 767px) {
     .mka__content-grid-offers {
       display: flex;
