--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -1,89 +1,91 @@
 .mka__home-slider {
-    aspect-ratio: 1.5 / 1;
-    margin-left: auto;
-    margin-right: auto;
-    transform: translate(0, 0);
-  }
+  aspect-ratio: 1.5 / 1;
+  margin-left: auto;
+  margin-right: auto;
+  transform: translate(0, 0);
+}
 
-.swiper-button-prev:before  {
-    content: "<" ;
-    color: var(--color-red);
-    line-height: 2;
-    font-family: 'Rubik', sans-serif;
-  }
+.swiper-button-prev:before {
+  content: "<";
+  color: var(--color-red);
+  line-height: 2;
+  font-family: 'Rubik', sans-serif;
+}
 
 .swiper-button-next:before {
-    content: ">" ;
-    color: var(--color-red);
-    line-height: 2;
-    font-family: 'Rubik', sans-serif;
-  }
+  content: ">";
+  color: var(--color-red);
+  line-height: 2;
+  font-family: 'Rubik', sans-serif;
+}
 
 .swiper-button-prev {
   position: fixed;
-    top: 45%;
-    width: 44px !important; 
-    height: 44px !important;
-    background-color: #fff;
-    transition: 300ms ease-out;
-    opacity: 0;
-    transform: translate(0, 0) !important;
-    outline: 0;
-    transition: background-color 0.2s ease, color 0.2s ease;
-  }
+  top: 45%;
+  width: 44px !important;
+  height: 44px !important;
+  background-color: #fff;
+  transition: 300ms ease-out;
+  opacity: 0;
+  transform: translate(0, 0) !important;
+  outline: 0;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
 
 .swiper-button-next {
-    position: fixed;
-    top: 45%;
-    width: 44px !important; 
-    height: 44px !important;
-    background-color: #fff;
-    transition: 300ms ease-out;
-    opacity: 0;
-    transform: translate(0, 0) !important;
-    outline: 0;
-    transition: background-color 0.2s ease, color 0.2s ease;
-  }
+  position: fixed;
+  top: 45%;
+  width: 44px !important;
+  height: 44px !important;
+  background-color: #fff;
+  transition: 300ms ease-out;
+  opacity: 0;
+  transform: translate(0, 0) !important;
+  outline: 0;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
 
 .swiper-button-prev::after,
 .swiper-button-next:after {
-    content: "" !important;
-  }
+  content: "" !important;
+}
 
 .swiper:hover .swiper-button-prev {
-    opacity: 1;
-    transform: translateX(-190%);
-  }
+  opacity: 1;
+  transform: translateX(-190%);
+}
 
 .swiper:hover .swiper-button-next {
-    opacity: 1;
-    transform: translateX(190%);
-  }
+  opacity: 1;
+  transform: translateX(190%);
+}
 
-.swiper-button-prev, .swiper-container-rtl .swiper-button-next {
+.swiper-button-prev,
+.swiper-container-rtl .swiper-button-next {
   left: -15px !important;
   right: auto;
 }
 
-.swiper-button-next, .swiper-container-rtl .swiper-button-prev {
+.swiper-button-next,
+.swiper-container-rtl .swiper-button-prev {
   right: -15px !important;
   left: auto;
 }
 
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
-    background-color: var(--color-red) !important;
-  }
+  background-color: var(--color-red) !important;
+}
 
 .swiper-button-prev:hover::before {
-    color: #fff !important;
-  }
+  color: #fff !important;
+}
 
 .swiper-button-next:hover::before {
-    color: #fff !important;
-  }
+  color: #fff !important;
+}
 
-.mka__img-slider-size > img {
-    width: 100%;
-    display: block;
-} 
+.mka__img-slider-size>img {
+  width: 100%;
+  display: block;
+}
