--- a/src/components/CarOffers/CarOffers.css
+++ b/src/components/CarOffers/CarOffers.css
@@ -144,6 +144,30 @@
   margin: 350px 0;
 }
 
+.mka__cars-grid {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  column-gap: 30px;
+  row-gap: 30px;
+}
+
+.mka__cars-flex {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 765px) {
+  .mka__cars-grid {
+    grid-template-columns: auto auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .mka__cars-grid {
+    grid-template-columns: auto;
+  }
+}
+
 @media (max-width: 767px) {
   .mka__content-grid-offers {
     display: flex;
