Dodatak izmjenama Home stranice

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
-.home-background-image {
+.mka__home-background-image {
     position: relative;
     z-index: 1;
     height: 780px;
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
 }
 
-.home-background-image h2 {
+.mka__home-background-image h2 {
     text-align: center;
     padding-top: 8rem;
     font-family: 'Raleway', sans-serif;
