--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,20 @@ li {
   font-size: 15px;
   line-height: 22px;
 }
+
+body {
+  background: var(--color-bg);
+}
+
+a {
+  color: unset;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+
+}
