--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  scroll-behavior: smooth;
-
-}
-
 html::-webkit-scrollbar {
   width: 5px;
 }
@@ -20,19 +12,13 @@ html::-webkit-scrollbar-track {
   background-color: #e7e7e7;
 }
 
-body {
-  background: var(--color-bg);
-}
-
-a {
-  color: unset;
-  text-decoration: none;
-}
-
-.header-img-div {
+.mka__header-background-img {
   position: relative;
   z-index: 1;
   height: 470px;
+  background-image: url(http://mkautomobile.at/wp-content/uploads/2021/04/dark-min.jpg?id=492);
+  background-size: auto;
+  background-repeat: no-repeat;
 }
 
 .page-container {
@@ -49,15 +35,19 @@ a {
   margin-bottom: 2rem;
 }
 
+.mka__logo-size {
+  width: 28%;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 2em;
+  right: 0;
+  text-align: center;
+}
+
 .mka__responsive-svg {
   width: 100%;
   height: auto;
-}
-
-#header-img-id {
-  background-image: url(http://mkautomobile.at/wp-content/uploads/2021/04/dark-min.jpg?id=492);
-  background-size: auto;
-  background-repeat: no-repeat;
 }
 
 .mka__left-alignment {
@@ -296,7 +286,7 @@ select {
     height: 50px;
   }
 
-  .mka__title {
+  .mka__container h1 {
     font-size: 28px;
     text-align: center;
   }
@@ -308,7 +298,7 @@ select {
 }
 
 @media (max-width: 992px) {
-  .mka__title {
+  .mka__container h1 {
     font-size: 28px;
   }
 }
