--- a/src/components/Jumbotrone/Jumbotrone.css
+++ b/src/components/Jumbotrone/Jumbotrone.css
@@ -33,12 +33,12 @@
   transition: 0.5s;
 }
 
-.mka__jumbotrone-red-line {
-  height: 2px;
-  width: 20px;
-  background-color: var(--color-red);
-  margin-top: 10px;
-  margin-bottom: 20px;
+.mka__jumbotrone-contact > .mka__contact-infos-divider {
+  margin-left: 0;
+}
+
+.mka__jumbotrone-opening-times > .mka__contact-infos-divider {
+  margin-left: 0;
 }
 
 .mka__jumbotrone-opening-times {
