--- a/src/pages/Kontakt/Kontakt.css
+++ b/src/pages/Kontakt/Kontakt.css
@@ -1,4 +1,4 @@
-#mka__contact-description {
+.mka__contact-description {
     text-align: center;
     color: white;
     padding-top: 8rem;
@@ -11,9 +11,5 @@
     bottom: 30px;
     left: 0;
     right: 0;
-}
-
-.mka__logo-size-kontakt {
-    width: clamp(264px, 24%, 440px);
 }
 
