--- a/src/components/CarOffers/CarOffers.css
+++ b/src/components/CarOffers/CarOffers.css
@@ -7,14 +7,6 @@
   padding-bottom: 80px;
 }
 
-.mka__wrapper-car-offers {
-  background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-  background-repeat: repeat;
-  height: 100%;
-  overflow: hidden;
-  background-size: auto;
-}
-
 .mka-sorting-div__offers {
   display: flex;
 }
@@ -26,7 +18,7 @@
   gap: 40px;
 }
 
-.item1 {
+.mka__filters-and-views {
   grid-area: header;
   border: 1px solid white;
   flex-wrap: wrap;
@@ -37,12 +29,12 @@
   justify-content: space-around;
 }
 
-.item2 {
+.mka__search-and-filters {
   grid-area: menu;
   width: 30vh;
 }
 
-.item3 {
+.mka__list-of-cars {
   grid-area: main;
   max-width: 100%;
 }
