--- a/src/components/Copyright/Copyright.css
+++ b/src/components/Copyright/Copyright.css
@@ -1,39 +1,21 @@
-  .mka__wrapper-copyright {
-    background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-    height: 100%;
-    background-repeat: repeat;
-    overflow: hidden;
-    background-size: contain;
-    min-height: 67rem;
-  }
-
-  .mka__container-copyright {
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    height: auto;
-    padding-top: 30px;
-  }
-
-  .mka__content-copyright {
+.mka__content-copyright {
     margin-top: 30px;
   }
 
-  .mka__content-copyright>p {
+  .mka__content-copyright p {
     margin: 0 0 10px;
     line-height: 22px;
   }
 
-  .mka__content-copyright>h4 {
+  .mka__content-copyright h4 {
     margin-bottom: 10px;
   }
 
-  .mka__content-copyright p>a {
+  .mka__content-copyright p a {
     color: var(--color-red);
   }
 
-  .mka__content-copyright p>a:hover {
+  .mka__content-copyright p a:hover {
     transition: 0.9s;
     color: var(--color-grey);
   }
@@ -42,7 +24,7 @@
     text-align: center;
   }
 
-  .mka__content-information>p {
+  .mka__content-information p {
     margin: 0 0 10px;
     line-height: 22px;
   }
@@ -53,7 +35,7 @@
     text-align: center;
   }
 
-  .mka__content-information>h4 {
+  .mka__content-information h4 {
     margin-bottom: 10px;
   }
 
