--- a/src/components/Error404/Error404.css
+++ b/src/components/Error404/Error404.css
@@ -1,11 +1,3 @@
-.mka__wrapper-error {
-  background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-  background-repeat: repeat;
-  overflow: hidden;
-  background-size: cover;
-  height: auto;
-}
-
 .mka__content-error {
   padding: 2rem 0;
   text-align: center;
@@ -18,24 +10,24 @@
   align-items: flex-end;
 }
 
-#title {
+.mka__content-error h1 {
   font-size: 50pt;
   margin: 10px 0;
 }
 
-#subtitle {
+.mka__content-error h3 {
   font-size: 15pt;
   font-style: italic;
   color: var(--color-red);
   margin: 10px 0;
 }
 
-#link {
+.mka__content-error a {
   text-decoration: none;
   color: var(--color-red);
 }
 
-#text {
+.mka__content-error p{
   color: var(--color-grey);
   margin: 20px 0;
 }
